--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,13 @@ lerna-debug.log*
 
 node_modules
 dist
+build
 dist-ssr
 *.local
 package-lock.json
 yarn-lock.json
 .env
-/src/components/Home/Keys.js
+
 
 # Editor directories and files
 .vscode/*
