--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -104,6 +104,8 @@
     "./src/**/*"
   ],
   "exclude": [
-    "node_modules"
-  ]
+    "node_modules","build"
+  ],
+  "files":["types.d.ts"]
+
 }
