--- a/back/.eslintrc.json
+++ b/back/.eslintrc.json
@@ -10,6 +10,8 @@
 
     ],
     "overrides": [
+        {"files":"",
+            "excludedFiles":"build/*.js"}
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
