--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -106,6 +106,9 @@
   "exclude": [
     "node_modules","build"
   ],
-  "files":["types.d.ts"]
+  "files":["types.d.ts"],
+  "files.exclude":{
+    "build":true
+  }
 
 }
