--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.6",
+    "@reduxjs/toolkit": "^1.8.5",
+    "react-redux": "^8.0.2",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
