--- a/front/package.json
+++ b/front/package.json
@@ -13,12 +13,13 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.6",
     "@reduxjs/toolkit": "^1.8.5",
-    "react-redux": "^8.0.2",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.1",
     "yup": "^0.32.11"
   },
