--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,8 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.1",
+    "sweetalert2": "^11.4.37",
+    "sweetalert2-react-content": "^5.0.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
