--- a/back/package.json
+++ b/back/package.json
@@ -38,6 +38,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.6.2"
   }
 }
