--- a/front/package.json
+++ b/front/package.json
@@ -23,7 +23,7 @@
         "react-router-dom": "^6.4.1",
         "yup": "^0.32.11",
         "sweetalert2": "^11.4.37",
-        "sweetalert2-react-content": "^5.0.3",
+        "sweetalert2-react-content": "^5.0.3"
     },
     "devDependencies": {
         "@types/react": "^18.0.17",
