--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "ts-node-dev src/index.ts",
-        "start": "node dist/index.js",
+        "start": "node ./build/index.js",
         "build": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
