--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "ts-node-dev src/index.ts",
         "start": "node build/index.js",
-        "build": "tsc",
+        "postinstall": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
