--- a/front/package.json
+++ b/front/package.json
@@ -16,15 +16,16 @@
         "@react-oauth/google": "^0.2.8",
         "@reduxjs/toolkit": "^1.8.5",
         "axios": "^0.27.2",
+        "cloudinary-react": "^1.8.1",
         "formik": "^2.2.9",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.4.0",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.4.1",
-        "yup": "^0.32.11",
         "sweetalert2": "^11.4.37",
-        "sweetalert2-react-content": "^5.0.3"
+        "sweetalert2-react-content": "^5.0.3",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@types/react": "^18.0.17",
