--- a/back/package.json
+++ b/back/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "scripts": {
         "dev": "ts-node-dev src/index.ts",
-        "start": "node build/index.js",
-        "tsc": "tsc",
+        "start": "node build/src/index.js",
+        "build": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
