--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -105,7 +105,7 @@
     "*.json"
   ],
   "exclude": [
-    "node_modules","build"
+    "node_modules","build","tsconfig.json"
   ],
   "files":["types.d.ts"],
   "files.exclude":{
