--- a/back/package.json
+++ b/back/package.json
@@ -20,8 +20,7 @@
         "@typescript-eslint/eslint-plugin": "^5.38.0",
         "@typescript-eslint/parser": "^5.38.0",
         "eslint": "^8.23.1",
-        "eslint-config-prettier": "^8.5.0",
-        "morgan": "^1.10.0",
+        "eslint-config-prettier": "^8.5.0",      
         "prettier": "^2.7.1",
         "ts-node-dev": "^2.0.0",
         "typescript": "^4.8.3"
@@ -39,6 +38,7 @@
         "express-validator": "^6.14.2",
         "jsonwebtoken": "^8.5.1",
         "jwt-decode": "^3.1.2",
-        "mongoose": "^6.6.2"
+        "mongoose": "^6.6.2",
+         "morgan": "^1.10.0"
     }
 }
