--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
         "@mui/material": "^5.10.6",
+        "@react-google-maps/api": "^2.13.1",
         "@react-oauth/google": "^0.2.8",
         "@reduxjs/toolkit": "^1.8.5",
         "axios": "^0.27.2",
@@ -22,9 +23,9 @@
         "react-icons": "^4.4.0",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.4.1",
-        "yup": "^0.32.11",
         "sweetalert2": "^11.4.37",
-        "sweetalert2-react-content": "^5.0.3"
+        "sweetalert2-react-content": "^5.0.3",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@types/react": "^18.0.17",
