--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
         "cloudinary-react": "^1.8.1",
         "formik": "^2.2.9",
         "react": "^18.2.0",
+        "react-carousel-minimal": "^1.4.1",
         "react-dom": "^18.2.0",
         "react-icons": "^4.4.0",
         "react-redux": "^8.0.2",
