--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -17,7 +17,7 @@
         "react"
     ],
     "rules": {
-        "indent": ["error", 4],
+        // "indent": ["error", 4],
         "quotes": ["error", "single"],
         "react/prop-types": 0
     }
