--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,8 @@
         "@emailjs/browser": "^3.7.0",
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
-        "@mui/material": "^5.10.6",
+        "@mui/material": "^5.10.9",
+        "@mui/x-data-grid": "^5.17.7",
         "@react-google-maps/api": "^2.13.1",
         "@react-oauth/google": "^0.2.8",
         "@reduxjs/toolkit": "^1.8.5",
