--- a/back/package.json
+++ b/back/package.json
@@ -29,6 +29,7 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/jsonwebtoken": "^8.5.9",
         "@types/morgan": "^1.9.3",
+        "axios": "^1.1.3",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.0",
         "cookie-parser": "^1.4.6",
