--- a/back/package.json
+++ b/back/package.json
@@ -17,6 +17,7 @@
         "@types/express": "^4.17.14",
         "@types/mongoose": "^5.11.97",
         "@types/node": "^18.7.18",
+        "@types/nodemailer": "^6.4.6",
         "@typescript-eslint/eslint-plugin": "^5.38.0",
         "@typescript-eslint/parser": "^5.38.0",
         "eslint": "^8.23.1",
@@ -40,6 +41,7 @@
         "jsonwebtoken": "^8.5.1",
         "jwt-decode": "^3.1.2",
         "mongoose": "^6.6.2",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "nodemailer": "^6.8.0"
     }
 }
