--- a/front/package.json
+++ b/front/package.json
@@ -22,11 +22,13 @@
         "formik": "^2.2.9",
         "react": "^18.2.0",
         "react-carousel-minimal": "^1.4.1",
+        "react-document-meta": "^3.0.0-beta.2",
         "react-dom": "^18.2.0",
         "react-icons": "^4.4.0",
         "react-mailchimp-subscribe": "^2.1.3",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.4.1",
+        "react-share": "^4.4.1",
         "redux": "^4.2.0",
         "sweetalert2": "^11.4.37",
         "sweetalert2-react-content": "^5.0.3",
