--- a/front/package.json
+++ b/front/package.json
@@ -45,6 +45,7 @@
         "eslint-plugin-promise": "^6.0.1",
         "eslint-plugin-react": "^7.31.8",
         "prettier": "^2.7.1",
-        "vite": "^3.1.0"
+        "vite": "^3.1.0",
+        "vite-plugin-rewrite-all": "^1.0.0"
     }
 }
