--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
         "react-dom": "^18.2.0",
         "react-icons": "^4.4.0",
         "react-mailchimp-subscribe": "^2.1.3",
+        "react-multi-carousel": "^2.8.2",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.4.1",
         "react-share": "^4.4.1",
